# ddcset-rs

./: .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  ci.nix  default.nix  derivation.nix  eudev-gettid.patch  flake.nix  lock.nix  shell.nix
.github/workflows/: ddcset.yml
src/: capabilities.rs  detect.rs  getvcp.rs  lib.rs  main.rs  save.rs  setvcp.rs  util.rs
