[package]
name = "ddcset"
version = "0.0.5"
authors = ["arcnmx"]
edition = "2018"

description = "DDC/CI display control application"
keywords = ["ddc", "vcp", "mccs", "ddccontrol", "ddcutil"]

repository = "https://github.com/arcnmx/ddcset-rs"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/ddcset-rs" }
maintenance = { status = "passively-maintained" }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
opt-level = 2
lto = true

[dependencies]
ddc-hi = { version = "^0.5.0", git = "https://github.com/arcnmx/ddc-hi-rs", branch = "v0.5.x" }
clap = { version = "^3.2", features = ["derive"] }
anyhow = "^1.0"
env_logger = "^0.9"
log = "^0.4"
mccs-db = "^0.1.1"
hex = "^0.4.2"
